# serializer version: 1
# name: test_attach_analysis_files[False]
  dict({
    '_id': 1,
    'files': list([
    ]),
    'ready': True,
  })
# ---
# name: test_attach_analysis_files[True]
  dict({
    '_id': 1,
    'files': list([
      dict({
        'analysis': 1,
        'description': None,
        'format': 'fasta',
        'id': 1,
        'name': 'reference-fa',
        'name_on_disk': '1-reference-fa',
        'size': None,
        'uploaded_at': None,
      }),
    ]),
    'ready': True,
  })
# ---
